package app.utils;

public enum TaskType
{
    PRODUCTION,
    MAINTENANCE,
    ERROR
}
